# ngas

src/ngamsCClient/: CMakeLists.txt  doc2txt.sh
test/: test_mime_multipart.py
